@@ -136,6 +136,30 @@ GSHashPointer (const void *value)
 #endif
 }
 
+CF_INLINE CFHashCode
+GSHashBytes (const void *bytes, CFIndex length)
+{
+  CFHashCode ret;
+  if (length > 0)
+    {
+      register CFIndex idx;
+      register const char *p = bytes;
+      
+      for (idx = 0 ; idx < length ; ++idx)
+        ret = (ret << 5) + ret + p[idx];
+      
+      ret &= 0x0fffffff;
+      if (ret == 0)
+        ret = 0x0fffffff;
+    }
+  else
+    {
+      ret = 0x0ffffffe;
+    }
+  
+  return ret;
+}
+
 
 
 const void *
